Archivos inecesarios e imports

--- a/TareaPrioridades/TareaPrioridades/Components/_Imports.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using TareaPrioridades
 @using TareaPrioridades.Components
+@using TareaPrioridades.Models
+@using TareaPrioridades.DAL
+@using TareaPrioridades.BLL
+
