Pagina del registro

--- a/TareaPrioridades/TareaPrioridades/Components/Pages/Home.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/Home.razor
@@ -2,6 +2,7 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Tarea #1 Aplicada 1 "Registro de Prioridades"</h1>
 
-Welcome to your new app.
+Delfry Paulino Ortega (2021-0609)
+
