--- a/TareaPrioridades/TareaPrioridades/Components/App.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/App.razor
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="TareaPrioridades.styles.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
