--- a/TareaPrioridades/TareaPrioridades/Components/Layout/NavMenu.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Layout/NavMenu.razor
@@ -14,6 +14,12 @@
             </NavLink>
         </div>
 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="RPrioridades">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Registro
+            </NavLink>
+        </div>
+
        
     </nav>
 </div>
