--- a/TareaPrioridades/TareaPrioridades/Components/Pages/R_Prioridades.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/R_Prioridades.razor
@@ -3,6 +3,7 @@
 @rendermode InteractiveServer
 @inject PrioridadesBLL prioridadesBLL;
 
+
 <EditForm Model="prioridades" OnValidSubmit="Guardar">
     <div class=" card">
 
@@ -14,31 +15,35 @@
 
             <label>PrioridadId</label>
 
-            <div class="input-group">
-                <InputNumber @bind-Value="prioridades.PrioridadId" class="id-input"></InputNumber>
+            <div >
+                <InputNumber @bind-Value="prioridades.PrioridadId" ></InputNumber>
                 <button type="button" class="btn btn-primary bi bi-search" @onclick="Buscar"></button>
             </div>
 
-            <div>
+            <div >
                 <label>Descripci&oacute;n</label>
                 <InputText @bind-Value="prioridades.Descripcion" class="form-control"></InputText>
                 @*hay que validar las descripciones*@
-
-                <label>Dias Compromiso</label>
-                <InputNumber @bind-Value="prioridades.DiasCompromiso" class="form-control"></InputNumber>
-                <ValidationMessage For="@(() => prioridades.DiasCompromiso)" />
-
+                
             </div>
 
-            <div class="card-footer">
-                <button type="button" class="btn btn-primary" @onclick="Nuevo">Nuevo<i class=" bi bi-file-earmark-diff-fill" /></button>
-                <button type="submit" class="btn btn-success">Guardar<i class="bi bi-floppy-fill" /></button>
-                <button type="button" class="btn btn-danger">Eliminar<i class="bi bi-trash-fill " /></button>
+            <div>
+                <label>Dias Compromiso</label><br />
+                <InputNumber @bind-Value="prioridades.DiasCompromiso" ></InputNumber>
+                <ValidationMessage For="@(() => prioridades.DiasCompromiso)"/>
+
             </div>
-
-
+           
+            
         </div>
 
+        
+
+        <div class="card-footer">
+            <button type="button" class="btn btn-primary" @onclick="Nuevo">Nuevo<i class=" bi bi-file-earmark-diff-fill" /></button>
+            <button type="submit" class="btn btn-success">Guardar<i class="bi bi-floppy-fill" /></button>
+            <button type="button" class="btn btn-danger">Eliminar<i class="bi bi-trash-fill " /></button>
+        </div>
     </div>
 
 
