--- a/TareaPrioridades/TareaPrioridades/Components/Pages/R_Prioridades.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/R_Prioridades.razor
@@ -3,8 +3,8 @@
 @rendermode InteractiveServer
 @inject PrioridadesBLL prioridadesBLL;
 
-
 <EditForm Model="prioridades" OnValidSubmit="Guardar">
+    <DataAnnotationsValidator />
     <div class=" card">
 
         <div class="card-header">
@@ -23,7 +23,11 @@
             <div >
                 <label>Descripci&oacute;n</label>
                 <InputText @bind-Value="prioridades.Descripcion" class="form-control"></InputText>
-                @*hay que validar las descripciones*@
+                <ValidationMessage For="@(() => prioridades.Descripcion)"/>
+                @if (_existe)@*Si existe es verdadero evita guardar*@
+                {
+                    <p class="text-danger">Descripci&oacute;n ya se encuentra registrada</p>
+                }
                 
             </div>
 
@@ -42,7 +46,7 @@
         <div class="card-footer">
             <button type="button" class="btn btn-primary" @onclick="Nuevo">Nuevo<i class=" bi bi-file-earmark-diff-fill" /></button>
             <button type="submit" class="btn btn-success">Guardar<i class="bi bi-floppy-fill" /></button>
-            <button type="button" class="btn btn-danger">Eliminar<i class="bi bi-trash-fill " /></button>
+            <button type="button" class="btn btn-danger" @onclick="Eliminar">Eliminar<i class="bi bi-trash-fill " /></button>
         </div>
     </div>
 
@@ -56,7 +60,7 @@
     public int PrioridadId { get; set; }
 
     public Prioridades prioridades = new Prioridades();
-    private bool descripciónExistente = false;
+    private bool _existe = false;
 
     protected override void OnInitialized()
     {
@@ -68,20 +72,46 @@
     }
     public void Buscar()
     {
+        _existe = false;
+        var prioridadEncontrada = prioridadesBLL.Buscar(prioridades.PrioridadId);
 
+        if (prioridadEncontrada != null)
+        {
+            this.prioridades = prioridadEncontrada;
+        }
     }
-    
+
     public void Nuevo()
     {
         this.prioridades = new Prioridades();
-        descripciónExistente = false;
+        _existe = false;
+    }
+    public bool Validar()
+    {
+        _existe = (prioridadesBLL.Listar(p => p.Descripcion!.ToLower() == prioridades.Descripcion!.ToLower()
+        && p.PrioridadId != prioridades.PrioridadId).Any());
+
+        return _existe;
     }
     public void Guardar()
     {
+        if (Validar())
+            return;
 
+        var guardo = prioridadesBLL.Guardar(this.prioridades);
+        Nuevo();
     }
     public void Eliminar()
     {
+        if (prioridadesBLL.Existe(prioridades.PrioridadId))
+        {
+            prioridadesBLL.Eliminar(this.prioridades);
+            this.Nuevo();
+        }
+        else
+        {
+            return;
+        }
 
     }
 
