--- a/TareaPrioridades/TareaPrioridades/Components/Layout/NavMenu.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Layout/NavMenu.razor
@@ -16,8 +16,9 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="RPrioridades">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Registro
+                <span class="bi bi-archive-fill d-flex align-items-center justify-content-center fs-5" aria-hidden="true"></span> Registro
             </NavLink>
+            
         </div>
        
     </nav>
