Bll clientes, Diseño, DBTickets

--- a/TareaPrioridades/TareaPrioridades/Components/Pages/Home.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/Home.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Tarea #1 Aplicada 1 "Registro de Prioridades"</h1>
+<h1>Tarea #2 Aplicada 1 "Registro de Clientes"</h1>
 
 Delfry Paulino Ortega (2021-0609)
 
