--- a/TareaPrioridades/TareaPrioridades/Components/Layout/NavMenu.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">TareaPrioridades</a>
+        <a class="navbar-brand" href="">TICKETS</a>
     </div>
 </div>
 
@@ -15,9 +15,13 @@
         </div> 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="RPrioridades">
-                <span class="bi bi-archive-fill d-flex align-items-center justify-content-center fs-5" aria-hidden="true"></span> Registro
+                <span class="bi bi-archive-fill d-flex align-items-center justify-content-center fs-5" aria-hidden="true"></span> Registro Prioridades
             </NavLink>
-            
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="RClientes">
+                <span class="bi bi-archive-fill d-flex align-items-center justify-content-center fs-5" aria-hidden="true"></span> Registro Clientes
+            </NavLink>
         </div>
     </nav>
 </div>
