Cambios en la BLL, menu de inicio, se agrega la consulta  de los registros y  estetica de los registros modificada

--- a/TareaPrioridades/TareaPrioridades/Components/Layout/NavMenu.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Layout/NavMenu.razor
@@ -19,8 +19,18 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="CPrioridades">
+                <span class="bi bi-folder-fill d-flex align-items-center justify-content-center fs-4" aria-hidden="true"></span> Consulta Prioridades
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="RClientes">
-                <span class="bi bi-archive-fill d-flex align-items-center justify-content-center fs-5" aria-hidden="true"></span> Registro Clientes
+                <span class="bi bi-person-plus-fill d-flex align-items-center justify-content-center fs-4" aria-hidden="true"></span> Registro Clientes
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="CClientes">
+                <span class="bi bi-person-vcard d-flex align-items-center justify-content-center fs-4" aria-hidden="true"></span> Consulta Clientes
             </NavLink>
         </div>
     </nav>
