--- a/TareaPrioridades/TareaPrioridades/Components/Pages/Registro/R_Clientes.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/Registro/R_Clientes.razor
@@ -3,13 +3,15 @@
 @rendermode InteractiveServer
 @inject ClientesBLL clientesBLL;
 
+<PageTitle>Registro Cliente</PageTitle>
+
 <EditForm Model="clientes" OnValidSubmit="Guardar">
     <DataAnnotationsValidator/>
-<div class="card">
+    <div class="card bg-dark">
         <div class="card-header">
-            <h1>Registro de Clientes</h1>
+            <h1 class="text-light">Registro de Clientes</h1>
         </div>
-        <div class="card-body">
+        <div class="card-body bg-white">
             <label>ClienteID</label>
             <div class="input-group">
                 <InputNumber @bind-Value="clientes.ClienteId" @oninput="MensajeGuardar" min="0" class="number-input"></InputNumber>
@@ -45,7 +47,6 @@
                 <InputText @bind-Value="clientes.Direccion" @oninput="MensajeGuardar" class="form-control"></InputText>
                 <ValidationMessage For="@(() => clientes.Direccion)"/>
             </div>
-            
         </div>
         <div class="card-footer">
             <div class="input-group">
@@ -63,11 +64,7 @@
             }
         </div>
     </div>
-
 </EditForm>
-
-
-
 
 @code {
 
@@ -76,7 +73,6 @@
     public Clientes clientes = new Clientes();
     public string? mensaje { get; set; }
     public int resultado { get; set; }
-
 
     protected override async Task OnInitializedAsync()
     {
