--- a/TareaPrioridades/TareaPrioridades/Components/Pages/Registro/R_Prioridades.razor
+++ b/TareaPrioridades/TareaPrioridades/Components/Pages/Registro/R_Prioridades.razor
@@ -3,13 +3,15 @@
 @rendermode InteractiveServer
 @inject PrioridadesBLL prioridadesBLL;
 
+<PageTitle>Registro Prioridad</PageTitle>
+
 <EditForm Model="prioridades" OnValidSubmit="Guardar">
     <DataAnnotationsValidator />
-    <div class="card">
+    <div class="card bg-dark">
         <div class="card-header">
-            <h1>Registro de Prioridades</h1>
+            <h1 class="text-light">Registro de Prioridades</h1>
         </div>
-        <div class="card-body">
+        <div class="card-body bg-light">
             <label>PrioridadID</label>
             <div class="input-group">
                 <InputNumber @bind-Value="prioridades.PrioridadId" @oninput="MensajeGuardar" min="0" class="number-input"></InputNumber>
@@ -91,7 +93,7 @@
         {
             resultado = 1;
             mensaje = "Registro Guardado";
-            Nuevo();
+            this.prioridades = new Prioridades();
         }
         else
         {
